@@ -1685,6 +1685,7 @@ void writepid(const char *name)
 	char	fn[NUT_PATH_MAX];
 	FILE	*pidf;
 	mode_t	mask;
+	intmax_t	initial_uid = getuid();
 
 	/* use full path if present, else build filename in PIDPATH */
 	if (*name == '/')
@@ -1694,6 +1695,10 @@ void writepid(const char *name)
 
 	mask = umask(022);
 	pidf = fopen(fn, "w");
+	if (!pidf && initial_uid) {
+		snprintf(fn, sizeof(fn), "%s/%s.pid", altpidpath(), name);
+		pidf = fopen(fn, "w");
+	}
 
 	if (pidf) {
 		intmax_t pid = (intmax_t)getpid();
@@ -2062,8 +2067,12 @@ int snprintfcat(char *dst, size_t size, const char *fmt, ...)
 int sendsignal(const char *progname, int sig, int check_current_progname)
 {
 	char	fn[NUT_PATH_MAX];
+	struct stat	st;
 
 	snprintf(fn, sizeof(fn), "%s/%s.pid", rootpidpath(), progname);
+	if (stat(fn, &st) != 0) {
+		snprintf(fn, sizeof(fn), "%s/%s.pid", altpidpath(), progname);
+	}
 
 	return sendsignalfn(fn, sig, progname, check_current_progname);
 }
