@@ -1,4 +1,4 @@
-personal_ws-1.1 en 3281 utf-8
+personal_ws-1.1 en 3283 utf-8
 AAC
 AAS
 ABI
@@ -2746,6 +2746,7 @@ roadmap
 rootca
 rootfs
 rootfs'es
+rootpidpath
 rpc
 rq
 rqt
@@ -3225,6 +3226,7 @@ workspaceFolder
 workspaces
 writability
 writeinfo
+writepid
 writeups
 ws
 xAAAA
